Sorting buttons not sitting correctly on mobile screen

--- a/styles.css
+++ b/styles.css
@@ -274,7 +274,7 @@ form div {
   align-items: center;
   padding: 0px 30px;
   width: 100%;
-  max-width: 450px;
+  max-width: 400px;
   top: 92%;
   left: 50%;
   transform: translate(-50%, -50%);
